Revert "First push with Fox Finance details"
This reverts commit 902b1a53cff4468a796624f78193408d158767b7.

--- a/.vuepress/scss/_layout.scss
+++ b/.vuepress/scss/_layout.scss
@@ -6,9 +6,9 @@ body {
   }
 
   .aqua-gradient {
-    background: #0b0c22!important;
-    background: -webkit-linear-gradient(50deg,#0b0c22,#000000)!important;
-    background: -o-linear-gradient(50deg,#0b0c22,#000000)!important;
-    background: linear-gradient(40deg,#0b0c22,#000000)!important
+    background: #2096ff!important;
+    background: -webkit-linear-gradient(50deg,#2096ff,#05ffa3)!important;
+    background: -o-linear-gradient(50deg,#2096ff,#05ffa3)!important;
+    background: linear-gradient(40deg,#2096ff,#05ffa3)!important
   }
 }
